# snake

./: .travis.yml  LICENSE  README.md  snake.cabal  snake.hs  stack.yaml
app/: Main.hs
