name:                snake
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/snake#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable snake
  main-is:             snake.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ncurses
                     , containers
                     , lens
                     , random
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snake
