name:                snake
version:             0.1.0.0
synopsis:            The snake game in Haskell
description:         Please see README.md
homepage:            http://github.com/githubuser/snake#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksey Makarov
maintainer:          aleksey.makarov@gmail.com
copyright:           2015 Aleksey Makarov
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable snake
  main-is:             snake.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ncurses
                     , containers
                     , lens
                     , random
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snake
